[+] index.js: Lanzar un servidor web en el puerto 3000 usando express [+] package.json: Define el script 'dev' para lanzar node

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API Rest para Fonefo Kids",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --watch ./index.js"
   },
   "author": "Juan Carlos Jiménez Gutiérrez <jcarlosj.dev@gmail.com>",
   "license": "ISC",
