[+] *.route.mjs: Se protegen todas las rutas de la aplicacion

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.mjs",
   "type": "module",
   "scripts": {
-    "dev": "node --watch ./src/index.mjs"
+    "dev": "node --env-file .env --watch ./src/index.mjs"
   },
   "author": "Juan Carlos Jiménez Gutiérrez <jcarlosj.dev@gmail.com>",
   "license": "ISC",
