[+] package.json: Define 'scripts':'test' & 'test:unix'

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.mjs",
   "type": "module",
   "scripts": {
-    "dev": "node --env-file .env --watch ./src/index.mjs"
+    "dev": "node --env-file .env --watch ./src/index.mjs",
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest --forceExit --detectOpenHandles --watchAll",
+    "test:unix": "node --experimental-vm-modules --no-warnings node_modules/jest/bin/jest.js --forceExit --detectOpenHandles --watchAll=true"
   },
   "author": "Juan Carlos Jiménez Gutiérrez <jcarlosj.dev@gmail.com>",
   "license": "ISC",
