[+] npm i -D cross-env [+] package.json: Define 'script' test

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --env-file .env --watch ./src/index.mjs",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "test:bash": "NODE_OPTIONS=--experimental-vm-modules jest",
     "test:cmd": "set NODE_OPTIONS=--experimental-vm-modules && jest",
     "test:powershell": "$env:NODE_OPTIONS='--experimental-vm-modules'; jest"
@@ -20,9 +21,10 @@
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
+    "cross-env": "^10.0.0",
     "jest": "^30.0.5"
   },
   "jest": {
     "testEnvironment": "node"
-  } 
+  }
 }
