--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "devDependencies": {
     "cross-env": "^10.0.0",
-    "jest": "^30.0.5"
+    "jest": "^30.0.5",
+    "mongodb-memory-server": "^10.2.0"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": ["<rootDir>/src/config/jest.config.mjs"]
   }
 }
