--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --env-file .env --watch ./src/index.mjs",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose --watchAll",
     "test:bash": "NODE_OPTIONS=--experimental-vm-modules jest --verbose",
     "test:cmd": "set NODE_OPTIONS=--experimental-vm-modules && jest --verbose",
     "test:powershell": "$env:NODE_OPTIONS='--experimental-vm-modules'; jest --verbose"
